--- a/packages/theme/src/form-item/vars.less
+++ b/packages/theme/src/form-item/vars.less
@@ -65,4 +65,6 @@
   --ti-form-item-extra-tip-font-size: var(--ti-common-font-size-1, 14px);
   // 表单额外提示信息字体行高
   --ti-form-item-extra-tip-line-height: var(--ti-common-line-height-number, 1.5);
+  // 表单numeric只读态上侧修正外边距(hide)
+  --ti-form-item-numeric-display-margin-top: -2px;
 }
